redo if not working

--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
   
 <section class="all__landing">
 
+  <video playsinline autoplay muted loop  id="front__video">
+    <source src="videos/red__3.mp4" type="video/webm">
+  </video>
 
   <!-- Optional: some overlay text to describe the video -->
   <div class="content">
     <h1>3D and Retouch</h1>
-    <button class="mybtn"><a href="/pages/landing.html">Enter Here</a></button>
+    <button class="mybtn"><a class="front__btn" href="/pages/landing.html">Enter Here</a></button>
   </div>
 </section>
 </body>
