--- a/pages/3D/storytel.html
+++ b/pages/3D/storytel.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/ecfaedbce8.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Unicase&family=Raleway&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/index.css">
     <link rel="stylesheet" href="styles/normalize.css">
     <title>FeliciaKyrling</title>
@@ -68,19 +68,34 @@
           </div>
         </nav>
                           <section class="all__storytel">
+                              <div class="storytel__text">
+                              <h2>MY TASK IN THIS JOB WAS TO HELP OUT DURING PHOTO SCANNING OF FACES AND ALSO CLEAN UP MESH IN THE PROGRAM ZBRUSH. <br> THEN I ALSO FIXED THE 
+                                PHOTOGRAPHED TEXTURES IN PHOTOSHOP.</h2>
+                              </div>
 
+                              <div class="img__storytel-box">
+                                <img src="/images/storytel.jpg" width="1400" height="800">
+                              </div>
+
+                              <div class="img__storytel-box">
+                                <img src="/images/storytel2.jpg" width="1400" height="800">
+                              </div>
+
+                              <iframe width="1300" height="800" src="https://www.youtube.com/embed/7nGjWP5t0CA" title="YouTube video player" frameborder="0" 
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                         </section>
-          <footer>
-            <div class="all__footer  bg-dark">
-            <img class="logo" src="/images/logo.png" alt="logo" width="50" height="50"> <!--väntar på logga-->
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-linkedin"></a>
-            <a href="#" class="fa fa-youtube"></a>
-            <a href="#" class="fa fa-pinterest"></a>
-            </div>
-        </footer>
+                        <footer>
+                          <div class="all__footer  bg-dark">
+                          <img class="logo" src="/images/logo.png" alt="logo" width="50" height="50"> 
+                          <a href="https://www.facebook.com/felicia.kyrling" class="fa fa-facebook"></a>
+                          <a href="https://www.instagram.com/feliciakyrling/?hl=sv" class="fa fa-instagram"></a>
+                          <a href="https://www.linkedin.com/in/felicia-kyrling-a1648b172/" class="fa fa-linkedin"></a>
+                          <a href="https://www.youtube.com/channel/UC1RMpGH1t-pn8DIno44voKQ" class="fa fa-youtube"></a>
+                          <a href="https://www.pinterest.co.uk/feliciakyrling/_saved/" class="fa fa-pinterest"></a>
+                          </div>
+                      </footer>
+      
 
 
     <script src="../script/main.js"></script>  
