--- a/pages/3D/ref.html
+++ b/pages/3D/ref.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/ecfaedbce8.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Unicase&family=Raleway&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/index.css">
     <link rel="stylesheet" href="styles/normalize.css">
     <title>FeliciaKyrling</title>
@@ -69,21 +69,32 @@
         </nav>
                           <section class="all__ref">
 
+                            <h2>REF STOCKHOLM 3D MODELS IN A RETRO LOOKING WAY. (NOT OFFICIAL!)</h2>
+                            <div class="video__ref-container">
+                            <video controls  width="1400" height="700">
+                              <source src="/videos/REF_Video_2.mp4" type="video/mp4">
+                            </video>
+                            </div>
+
+                            <div class="img__ref-container">
+                              <img src="/images/ref.jpg" width="1400" height="800">
+                            </div>
 
                         </section>
-          <footer>
-            <div class="all__footer  bg-dark">
-            <img class="logo" src="/images/logo.png" alt="logo" width="50" height="50"> 
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-linkedin"></a>
-            <a href="#" class="fa fa-youtube"></a>
-            <a href="#" class="fa fa-pinterest"></a>
-            </div>
-        </footer>
+                        <footer>
+                          <div class="all__footer  bg-dark">
+                          <img class="logo" src="/images/logo.png" alt="logo" width="50" height="50"> 
+                          <a href="https://www.facebook.com/felicia.kyrling" class="fa fa-facebook"></a>
+                          <a href="https://www.instagram.com/feliciakyrling/?hl=sv" class="fa fa-instagram"></a>
+                          <a href="https://www.linkedin.com/in/felicia-kyrling-a1648b172/" class="fa fa-linkedin"></a>
+                          <a href="https://www.youtube.com/channel/UC1RMpGH1t-pn8DIno44voKQ" class="fa fa-youtube"></a>
+                          <a href="https://www.pinterest.co.uk/feliciakyrling/_saved/" class="fa fa-pinterest"></a>
+                          </div>
+                      </footer>
+      
 
 
-    <script src="../script/main.js"></script>  
+    <script src="/script/main.js"></script>  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
     </script>
   </body>
