--- a/pages/Retouch/maria.html
+++ b/pages/Retouch/maria.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/ecfaedbce8.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Unicase&family=Raleway&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/index.css">
     <link rel="stylesheet" href="styles/normalize.css">
     <title>FeliciaKyrling</title>
@@ -73,22 +73,18 @@
                     <div class="container">
                       <div class="box">
                         <img src="/images/maria1.jpg">
-                        <span>Vill du ha text felly?</span>
                       </div>
                       <div class="box">
                         <img src="/images/maria2.jpg">
-                        <span>Vill du ha text felly?</span>
                       </div>
                     </div>
 
                     <div class="container">
                       <div class="box">
                         <img src="/images/maria3.jpg">
-                        <span>Vill du ha text felly?</span>
                       </div>
                       <div class="box">
                         <img src="/images/maria4.jpg">
-                        <span>Vill du ha text felly?</span>
                       </div>
                     </div>
 
@@ -101,13 +97,14 @@
                   <footer>
                     <div class="all__footer  bg-dark">
                     <img class="logo" src="/images/logo.png" alt="logo" width="50" height="50"> 
-                    <a href="#" class="fa fa-facebook"></a>
-                    <a href="#" class="fa fa-twitter"></a>
-                    <a href="#" class="fa fa-linkedin"></a>
-                    <a href="#" class="fa fa-youtube"></a>
-                    <a href="#" class="fa fa-pinterest"></a>
+                    <a href="https://www.facebook.com/felicia.kyrling" class="fa fa-facebook"></a>
+                    <a href="https://www.instagram.com/feliciakyrling/?hl=sv" class="fa fa-instagram"></a>
+                    <a href="https://www.linkedin.com/in/felicia-kyrling-a1648b172/" class="fa fa-linkedin"></a>
+                    <a href="https://www.youtube.com/channel/UC1RMpGH1t-pn8DIno44voKQ" class="fa fa-youtube"></a>
+                    <a href="https://www.pinterest.co.uk/feliciakyrling/_saved/" class="fa fa-pinterest"></a>
                     </div>
                 </footer>
+
 
 
         <script src="../script/main.js"></script>    
