--- a/pages/landing.html
+++ b/pages/landing.html
@@ -75,25 +75,19 @@
             <img src="/images/front3.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/images/front5.jpg" class="d-block w-100" alt="...">
+            <img src="/images/Front8.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/images/front7.jpg" class="d-block w-100" alt="...">
+            <img src="/images/granit1.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="/images/front4.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/images/front5.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/3D1.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
             <img src="/images/front7.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/images/front3.jpg" class="d-block w-100" alt="...">
+            <img src="/images/sven.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"  data-bs-slide="prev">
@@ -111,13 +105,14 @@
       <footer>
         <div class="all__footer  bg-dark">
         <img class="logo" src="/images/logo.png" alt="logo" width="50" height="50"> 
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-linkedin"></a>
-        <a href="#" class="fa fa-youtube"></a>
-        <a href="#" class="fa fa-pinterest"></a>
+        <a href="https://www.facebook.com/felicia.kyrling" class="fa fa-facebook"></a>
+        <a href="https://www.instagram.com/feliciakyrling/?hl=sv" class="fa fa-instagram"></a>
+        <a href="https://www.linkedin.com/in/felicia-kyrling-a1648b172/" class="fa fa-linkedin"></a>
+        <a href="https://www.youtube.com/channel/UC1RMpGH1t-pn8DIno44voKQ" class="fa fa-youtube"></a>
+        <a href="https://www.pinterest.co.uk/feliciakyrling/_saved/" class="fa fa-pinterest"></a>
         </div>
     </footer>
+
 
 <script src="../script/main.js"></script>       
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
