--- a/pages/3D/wacom.html
+++ b/pages/3D/wacom.html
@@ -15,7 +15,7 @@
     <title>FeliciaKyrling</title>
 </head>
   <body>
-          <nav class="navbar navbar-fixed-bottom navbar-expand-lg bg-dark" alt="navbar">
+    <nav class="navbar navbar-fixed-bottom navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="/index.html">
                 <img src="/images/logo.png" alt="" width="70" height="70">
@@ -57,10 +57,10 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="../about.html">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="../contact.html">Contact</a>
                   </li>
                 </ul>
               </div>
@@ -74,10 +74,10 @@
                         <div class="wacom__text">
                           <p>My contribution to the wacom montage competetion 2020, which was awarded with a second place. 
                             It is all done in 3D, If you would like to see how the whole process looks, then take a look at the video down here for speedrun</p>
-                            <i class="fas fa-angle-down fa-3x"></i>
+                            <i class="fas fa-angle-down fa-2x"></i>
                         </div>
                         <div class="video__box">
-                          <iframe width="560" height="315" src="https://www.youtube.com/embed/8IXrUkRB43w" title="YouTube video player" frameborder="0"
+                          <iframe width="960" height="515" src="https://www.youtube.com/embed/8IXrUkRB43w" title="YouTube video player" frameborder="0"
                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
 
