--- a/pages/Retouch/amanda.html
+++ b/pages/Retouch/amanda.html
@@ -15,7 +15,7 @@
     <title>FeliciaKyrling</title>
 </head>
   <body>
-          <nav class="navbar navbar-fixed-bottom navbar-expand-lg bg-dark" alt="navbar">
+    <nav class="navbar navbar-fixed-bottom navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="/index.html">
                 <img src="/images/logo.png" alt="" width="70" height="70">
@@ -57,10 +57,10 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/pages/about.html">About</a>
+                    <a class="nav-link" href="../about.html">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="../contact.html">Contact</a>
                   </li>
                 </ul>
               </div>
