--- a/pages/3D/ghosthouse.html
+++ b/pages/3D/ghosthouse.html
@@ -15,7 +15,7 @@
     <title>FeliciaKyrling</title>
 </head>
   <body>
-          <nav class="navbar navbar-fixed-bottom navbar-expand-lg bg-dark" alt="navbar">
+    <nav class="navbar navbar-fixed-bottom navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="/index.html">
                 <img src="/images/logo.png" alt="" width="70" height="70">
@@ -57,10 +57,10 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="../about.html">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="../contact.html">Contact</a>
                   </li>
                 </ul>
               </div>
@@ -78,7 +78,7 @@
                     
                  
                     <div class="ghost__video">
-                      <iframe width="560" height="315" src="https://www.youtube.com/embed/0cATd-kYgUo" title="YouTube video player" 
+                      <iframe width="1400" height="900" src="https://www.youtube.com/embed/0cATd-kYgUo" title="YouTube video player" 
                       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
 
