--- a/pages/3D/ghosthouse.html
+++ b/pages/3D/ghosthouse.html
@@ -83,11 +83,11 @@
                     </div>
 
                     <div class="ghost__image1">
-                      <img src="/images/front4.jpg" width="1400" height="900">
+                      <img src="/images/front4.jpg" class="ghost__img">
                     </div>  
 
                   <div class="ghost__image2">
-                    <img src="/images/ghosthouse__gray.jpg" width="1400" height="900">
+                    <img src="/images/ghosthouse__gray.jpg" class="ghost__img">
                   </div>
             </section>
 
