--- a/pages/3D/weeds.html
+++ b/pages/3D/weeds.html
@@ -72,11 +72,11 @@
 
                             <div class="weeds__imagebox1">
                               <h2>THE OOC WEEDS GAME- LOW POLY 3D ASSETS</h2>
-                              <img src="/images/ooc.jpg" width="1400" height="900">
+                              <img src="/images/ooc.jpg" class="weed__img">
                             </div>
                             
                             <div class="weeds__imagebox2">
-                              <img src="/images/ooc2.jpg" width="1400" height="900">
+                              <img src="/images/ooc2.jpg" class="weed__img">
                             </div>
 
                             <div class="weeds__videobox">
