--- a/pages/Retouch/sven.html
+++ b/pages/Retouch/sven.html
@@ -82,11 +82,11 @@
                   <footer>
                     <div class="all__footer  bg-dark">
                     <img class="logo" src="/images/logo.png" alt="logo" width="50" height="50"> 
-                    <a href="#" class="fa fa-facebook"></a>
-                    <a href="#" class="fa fa-twitter"></a>
-                    <a href="#" class="fa fa-linkedin"></a>
-                    <a href="#" class="fa fa-youtube"></a>
-                    <a href="#" class="fa fa-pinterest"></a>
+                    <a href="https://www.facebook.com/felicia.kyrling" class="fa fa-facebook"></a>
+                    <a href="https://www.instagram.com/feliciakyrling/?hl=sv" class="fa fa-instagram"></a>
+                    <a href="https://www.linkedin.com/in/felicia-kyrling-a1648b172/" class="fa fa-linkedin"></a>
+                    <a href="https://www.youtube.com/channel/UC1RMpGH1t-pn8DIno44voKQ" class="fa fa-youtube"></a>
+                    <a href="https://www.pinterest.co.uk/feliciakyrling/_saved/" class="fa fa-pinterest"></a>
                     </div>
                 </footer>
 
