updated what customer wanted

--- a/pages/3D/ref.html
+++ b/pages/3D/ref.html
@@ -71,13 +71,12 @@
 
                             <h2>REF STOCKHOLM 3D MODELS IN A RETRO LOOKING WAY. (NOT OFFICIAL!)</h2>
                             <div class="video__ref-container">
-                            <video controls  width="1400" height="700">
-                              <source src="/videos/REF_Video_2.mp4" type="video/mp4">
-                            </video>
+                              <iframe width="1400" height="800" src="https://www.youtube.com/embed/FWGJE6k66Vs" title="YouTube video player" frameborder="0"
+                               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
 
                             <div class="img__ref-container">
-                              <img src="/images/ref.jpg" width="1400" height="800">
+                              <img class="ref__pic" src="/images/ref3.jpg">
                             </div>
 
                         </section>
@@ -88,7 +87,7 @@
                           <a href="https://www.instagram.com/feliciakyrling/?hl=sv" class="fa fa-instagram"></a>
                           <a href="https://www.linkedin.com/in/felicia-kyrling-a1648b172/" class="fa fa-linkedin"></a>
                           <a href="https://www.youtube.com/channel/UC1RMpGH1t-pn8DIno44voKQ" class="fa fa-youtube"></a>
-                          <a href="https://www.pinterest.co.uk/feliciakyrling/_saved/" class="fa fa-pinterest"></a>
+                          <a href="https://www.pinterest.co.uk/feliciakyrling/_saved/" class="fab fa-artstation"></a>
                           </div>
                       </footer>
       
