--- a/pages/Retouch/maria.html
+++ b/pages/Retouch/maria.html
@@ -70,22 +70,14 @@
                   
                   <section class="all__maria-page"> 
 
-                    <div class="container">
-                      <div class="box">
-                        <img src="/images/maria1.jpg">
-                      </div>
-                      <div class="box">
-                        <img src="/images/maria2.jpg">
-                      </div>
+                    <div class="container1">
+                      <img class="maria__pic" src="/images/maria1.jpg">                                     
+                      <img class="maria__pic1" src="/images/maria2.jpg">                    
                     </div>
 
-                    <div class="container">
-                      <div class="box">
-                        <img src="/images/maria3.jpg">
-                      </div>
-                      <div class="box">
-                        <img src="/images/maria4.jpg">
-                      </div>
+                    <div class="container2">
+                        <img class="maria__pic" src="/images/maria3.jpg">
+                        <img class="maria__pic1" src="/images/maria4.jpg">
                     </div>
 
                     <div class="text__photographer">
@@ -101,7 +93,7 @@
                     <a href="https://www.instagram.com/feliciakyrling/?hl=sv" class="fa fa-instagram"></a>
                     <a href="https://www.linkedin.com/in/felicia-kyrling-a1648b172/" class="fa fa-linkedin"></a>
                     <a href="https://www.youtube.com/channel/UC1RMpGH1t-pn8DIno44voKQ" class="fa fa-youtube"></a>
-                    <a href="https://www.pinterest.co.uk/feliciakyrling/_saved/" class="fa fa-pinterest"></a>
+                    <a href="https://www.pinterest.co.uk/feliciakyrling/_saved/" class="fab fa-artstation"></a>
                     </div>
                 </footer>
 
