--- a/pages/contact.html
+++ b/pages/contact.html
@@ -115,7 +115,7 @@
                     <a href="https://www.instagram.com/feliciakyrling/?hl=sv" class="fa fa-instagram"></a>
                     <a href="https://www.linkedin.com/in/felicia-kyrling-a1648b172/" class="fa fa-linkedin"></a>
                     <a href="https://www.youtube.com/channel/UC1RMpGH1t-pn8DIno44voKQ" class="fa fa-youtube"></a>
-                    <a href="https://www.pinterest.co.uk/feliciakyrling/_saved/" class="fa fa-pinterest"></a>
+                    <a href="https://www.pinterest.co.uk/feliciakyrling/_saved/" class="fab fa-artstation"></a>
                     </div>
                 </footer>
 
