--- a/pages/3D/ghosthouse.html
+++ b/pages/3D/ghosthouse.html
@@ -15,7 +15,7 @@
     <title>FeliciaKyrling</title>
 </head>
   <body>
-    <nav class="navbar navbar-fixed-bottom navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-fixed-bottom navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="/index.html">
                 <img src="/images/logo.png" alt="" width="70" height="70">
@@ -98,7 +98,7 @@
               <a href="https://www.instagram.com/feliciakyrling/?hl=sv" class="fa fa-instagram"></a>
               <a href="https://www.linkedin.com/in/felicia-kyrling-a1648b172/" class="fa fa-linkedin"></a>
               <a href="https://www.youtube.com/channel/UC1RMpGH1t-pn8DIno44voKQ" class="fa fa-youtube"></a>
-              <a href="https://www.pinterest.co.uk/feliciakyrling/_saved/" class="fa fa-pinterest"></a>
+              <a href="https://www.pinterest.co.uk/feliciakyrling/_saved/" class="fab fa-artstation"></a>
               </div>
           </footer>
 
