--- a/pages/3D/loxell.html
+++ b/pages/3D/loxell.html
@@ -15,7 +15,7 @@
     <title>FeliciaKyrling</title>
 </head>
   <body>
-        <nav class="navbar navbar-fixed-bottom navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-fixed-bottom navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="/index.html">
                 <img src="/images/logo.png" alt="" width="70" height="70">
