--- a/pages/3D/storytel.html
+++ b/pages/3D/storytel.html
@@ -68,11 +68,7 @@
           </div>
         </nav>
                           <section class="all__storytel">
-                              <div class="storytel__text">
-                              <h2>MY TASK IN THIS JOB WAS TO HELP OUT DURING PHOTO SCANNING OF FACES AND ALSO CLEAN UP MESH IN THE PROGRAM ZBRUSH. <br> THEN I ALSO FIXED THE 
-                                PHOTOGRAPHED TEXTURES IN PHOTOSHOP.</h2>
-                              </div>
-
+                      
                               <div class="img__storytel-box">
                                 <img src="/images/storytel.jpg" width="1400" height="800">
                               </div>
@@ -83,6 +79,11 @@
 
                               <iframe width="1300" height="800" src="https://www.youtube.com/embed/7nGjWP5t0CA" title="YouTube video player" frameborder="0" 
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                
+                                <div class="storytel__text">
+                                  <p class="story__head-text">MY TASK IN THIS JOB WAS TO HELP OUT DURING PHOTO SCANNING OF FACES AND ALSO CLEAN UP MESH IN THE PROGRAM ZBRUSH. THEN I ALSO FIXED THE 
+                                    PHOTOGRAPHED TEXTURES IN PHOTOSHOP.</p>
+                                  </div>
 
                         </section>
                         <footer>
