updated all footers and headers

--- a/pages/landing.html
+++ b/pages/landing.html
@@ -15,7 +15,7 @@
     <title>FeliciaKyrling</title>
 </head>
 <body> <!--FRÅGA: Varför är den bara responsiv på landing page men inte de andra? Meny kommer upp i mobil på land men ej på de övriga sidorna?-->
-    <nav class="navbar navbar-fixed-bottom navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-fixed-bottom navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
           <a class="navbar-brand" href="/index.html">
             <img src="/images/logo.png" alt="" width="70" height="70">
@@ -105,7 +105,7 @@
 
 
       <footer>
-        <div class="all__footer  bg-dark">
+        <div class="all__footer  bg-white">
         <img class="logo" src="/images/logo.png" alt="logo" width="50" height="50"> 
         <a href="https://www.facebook.com/felicia.kyrling" class="fa fa-facebook"></a>
         <a href="https://www.instagram.com/feliciakyrling/?hl=sv" class="fa fa-instagram"></a>
