--- a/pages/3D/storytel.html
+++ b/pages/3D/storytel.html
@@ -15,7 +15,7 @@
     <title>FeliciaKyrling</title>
 </head>
   <body>
-    <nav class="navbar navbar-fixed-bottom navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-fixed-bottom navbar-expand-lg navbar-light bg-white">
           <div class="container-fluid">
             <a class="navbar-brand" href="/index.html">
               <img src="/images/logo.png" alt="" width="70" height="70">
@@ -87,7 +87,7 @@
 
                         </section>
                         <footer>
-                          <div class="all__footer  bg-dark">
+                          <div class="all__footer  bg-white">
                           <img class="logo" src="/images/logo.png" alt="logo" width="50" height="50"> 
                           <a href="https://www.facebook.com/felicia.kyrling" class="fa fa-facebook"></a>
                           <a href="https://www.instagram.com/feliciakyrling/?hl=sv" class="fa fa-instagram"></a>
