--- a/pages/about.html
+++ b/pages/about.html
@@ -15,7 +15,7 @@
     <title>FeliciaKyrling</title>
 </head>
   <body>
-        <nav class="navbar navbar-fixed-bottom navbar-expand-lg navbar-light bg-light">   
+        <nav class="navbar navbar-fixed-bottom navbar-expand-lg navbar-light bg-white">   
             <div class="container-fluid">
               <a class="navbar-brand" href="/index.html">
                 <img src="/images/logo.png" alt="" width="70" height="70">
@@ -81,7 +81,7 @@
                         
                         <div class="felicia__box">
                           <div class="felicia__image">
-                          <img class="felicia__pic" src="../images/felly_.jpeg">
+                          <img class="felicia__pic" src="../images/felly_2.jpg">
                           </div>
                           <div class="felicia__text-box">
                             <h2 class="laugh">** laughing **</h2>
@@ -117,7 +117,7 @@
                   </section>
 
                   <footer>
-                    <div class="all__footer  bg-dark">
+                    <div class="all__footer  bg-white">
                     <img class="logo" src="/images/logo.png" alt="logo" width="50" height="50"> 
                     <a href="https://www.facebook.com/felicia.kyrling" class="fa fa-facebook"></a>
                     <a href="https://www.instagram.com/feliciakyrling/?hl=sv" class="fa fa-instagram"></a>
