media q and other upd

--- a/index.html
+++ b/index.html
@@ -8,19 +8,25 @@
     <link rel="stylesheet" href="../styles/normalize.css">
     <title>Document</title>
 </head>
-<body class="body__front">
+<body>
   
   
 <section class="all__landing">
-
-  <video playsinline autoplay muted loop  id="front__video">
-    <source src="videos/red__3.mp4" type="video/webm">
+<!--FRÅGA: Hur får jag videon att platsa på sidan?dvs utan scroll här-->
+  <video playsinline autoplay muted loop  id="myVideo">
+    <source src="videos/red__3.mp4" type="video/mp4">
   </video>
+
+
+
+ 
 
   <!-- Optional: some overlay text to describe the video -->
   <div class="content">
+    <div class="index__text-box">
     <h1>3D and Retouch</h1>
     <button class="mybtn"><a class="front__btn" href="/pages/landing.html">Enter Here</a></button>
+  </div>
   </div>
 </section>
 </body>
