--- a/pages/Retouch/granit.html
+++ b/pages/Retouch/granit.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/ecfaedbce8.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fjalla+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/index.css">
     <link rel="stylesheet" href="styles/normalize.css">
     <title>FeliciaKyrling</title>
@@ -68,21 +68,21 @@
             </div>
           </nav>
               
-                  <section class="all__granit-page"> 
+                <section class="all__granit-page"> 
 
                     <div class="granit__container">
                       <div class="granit__box">
-                        <img src="/images/granit1.jpg">
+                        <img src="/images/granit1__test.jpg" class="granit__pic">
                       </div>
                     <div class="granit__container2">
                       <div class="granit__box2">
-                        <img src="/images/granit3.jpg" width="550" height="900">
+                        <img src="/images/granit3_Test.jpg" class="granit__pic1">
                       </div>
                       <div class="granit__box2">
-                        <img src="/images/granit4.jpg" width="550" height="900">
+                        <img src="/images/granit4_test.jpg" class="granit__pic1" >
                       </div>
                       <div class="granit__box2">
-                        <img src="/images/granit2.jpg" width="550" height="900">
+                        <img src="/images/granit2_test.jpg" class="granit__pic1">
                       </div>
                     </div>
                     </div>
@@ -91,16 +91,16 @@
                       <span>Photographed by: Matilda Hammar<i class="fas fa-camera-retro"></i></span>
                     </div>
                           
-                  </section>
+                </section>
 
                   <footer>
                     <div class="all__footer  bg-white">
-                    <img class="logo" src="/images/logo.png" alt="logo" width="50" height="50"> 
-                    <a href="https://www.facebook.com/felicia.kyrling" class="fa fa-facebook"></a>
-                    <a href="https://www.instagram.com/feliciakyrling/?hl=sv" class="fa fa-instagram"></a>
-                    <a href="https://www.linkedin.com/in/felicia-kyrling-a1648b172/" class="fa fa-linkedin"></a>
-                    <a href="https://www.youtube.com/channel/UC1RMpGH1t-pn8DIno44voKQ" class="fa fa-youtube"></a>
-                    <a href="https://www.pinterest.co.uk/feliciakyrling/_saved/" class="fab fa-artstation"></a>
+                      <img class="logo" src="/images/logo.png" alt="logo" width="50" height="50"> 
+                      <a href="https://www.facebook.com/felicia.kyrling" class="fa fa-facebook" target="_blank"></a>
+                      <a href="https://www.instagram.com/feliciakyrling/?hl=sv" class="fa fa-instagram" target="_blank"></a>
+                      <a href="https://www.linkedin.com/in/felicia-kyrling-a1648b172/" class="fa fa-linkedin" target="_blank"></a>
+                      <a href="https://www.youtube.com/channel/UC1RMpGH1t-pn8DIno44voKQ" class="fa fa-youtube" target="_blank"></a>
+                      <a href="https://www.artstation.com/feliciakyrling" class="fab fa-artstation" target="_blank"></a>
                     </div>
                 </footer>
 
