--- a/pages/3D/wacom.html
+++ b/pages/3D/wacom.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/ecfaedbce8.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fjalla+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/index.css">
     <link rel="stylesheet" href="styles/normalize.css">
     <title>FeliciaKyrling</title>
@@ -67,40 +67,38 @@
                 </form>
             </div>
           </nav>
-              <!--Googla på inspo..vet ej va för snyggt man kan hitta på här än..återkom-->
-                  <section class="all__wacom-page"> 
+           
+                <section class="all__wacom-page"> 
 
                     <div class="wacom__image-box">
                       <img src="/images/3D1.jpg" alt="robot" class="wacom__image">
                     </div>
 
                       <div class="vid-text__container">
-                        <div class="wacom__text">
-                          <p>My contribution to the wacom montage competetion 2020, which was awarded with a second place. 
-                            It is all done in 3D, If you would like to see how the whole process looks, then take a look at the video down here for speedrun</p>
-                            <i class="fas fa-angle-down fa-2x"></i>
-                        </div>
+                          <div class="wacom__text">
+                            <p>My contribution to the wacom montage competetion 2020, which was awarded with a second place. 
+                              It is all done in 3D, If you would like to see how the whole process looks, then take a look at the video down here for speedrun</p>
+                              <i class="fas fa-angle-down fa-2x"></i>
+                          </div>
                         <div class="video__box">
-                          <iframe width="960" height="515" src="https://www.youtube.com/embed/8IXrUkRB43w" title="YouTube video player" frameborder="0"
-                           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe width="960" height="515" src="https://www.youtube.com/embed/8IXrUkRB43w" title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
 
                       </div>   
                                               
-                  </section>
+                </section>
 
                   <footer>
                     <div class="all__footer  bg-white">
-                    <img class="logo" src="/images/logo.png" alt="logo" width="50" height="50"> 
-                    <a href="https://www.facebook.com/felicia.kyrling" class="fa fa-facebook"></a>
-                    <a href="https://www.instagram.com/feliciakyrling/?hl=sv" class="fa fa-instagram"></a>
-                    <a href="https://www.linkedin.com/in/felicia-kyrling-a1648b172/" class="fa fa-linkedin"></a>
-                    <a href="https://www.youtube.com/channel/UC1RMpGH1t-pn8DIno44voKQ" class="fa fa-youtube"></a>
-                    <a href="https://www.pinterest.co.uk/feliciakyrling/_saved/" class="fab fa-artstation"></a>
+                      <img class="logo" src="/images/logo.png" alt="logo" width="50" height="50"> 
+                      <a href="https://www.facebook.com/felicia.kyrling" class="fa fa-facebook" target="_blank"></a>
+                      <a href="https://www.instagram.com/feliciakyrling/?hl=sv" class="fa fa-instagram" target="_blank"></a>
+                      <a href="https://www.linkedin.com/in/felicia-kyrling-a1648b172/" class="fa fa-linkedin" target="_blank"></a>
+                      <a href="https://www.youtube.com/channel/UC1RMpGH1t-pn8DIno44voKQ" class="fa fa-youtube" target="_blank"></a>
+                      <a href="https://www.artstation.com/feliciakyrling" class="fab fa-artstation" target="_blank"></a>
                     </div>
                 </footer>
-
-
 
         <script src="../script/main.js"></script>    
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
