--- a/pages/contact.html
+++ b/pages/contact.html
@@ -100,7 +100,7 @@
                             </div>
                           </div>
                           <div class="col-xs-12">
-                            <div class="btn-lrg submit-btn"><a href = "mailto: feliciakyrling@gmail.com" class="contact__btn">Send Message</a></div>
+                            <div class="btn-lrg submit-btn"><a href = "" class="contact__btn">Send Message</a></div>
                           </div>
                       </div>
                     </div>
