changed index and fixed on all pages

--- a/index.html
+++ b/index.html
@@ -10,16 +10,8 @@
 </head>
 <body>
   
-  
-<section class="all__landing">
-<!--FRÅGA: Hur får jag videon att platsa på sidan?dvs utan scroll här-->
-  <video playsinline autoplay muted loop  id="myVideo">
-    <source src="videos/red__3.mp4" type="video/mp4">
-  </video>
-
-
-
- 
+  <div class="redbull__background">
+<section class="all__index">
 
   <!-- Optional: some overlay text to describe the video -->
   <div class="content">
@@ -29,5 +21,6 @@
   </div>
   </div>
 </section>
+  </div>
 </body>
 </html>
