--- a/pages/landing.html
+++ b/pages/landing.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <title>FeliciaKyrling</title>
 </head>
-<body> <!--FRÅGA: Varför är den bara responsiv på landing page men inte de andra? Meny kommer upp i mobil på land men ej på de övriga sidorna?-->
+<body> 
     <nav class="navbar navbar-fixed-bottom navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
           <a class="navbar-brand" href="/index.html">
@@ -27,7 +27,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/pages/landing.html">Home</a>
+                <a class="nav-link active " aria-current="page" href="/pages/landing.html">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -60,7 +60,7 @@
                 <a class="nav-link" href="/pages/about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/contact.html">Contact</a>
+                <a class="nav-link " href="/pages/contact.html">Contact</a>
               </li>
             </ul>
           </div>
@@ -71,7 +71,7 @@
       <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/images/3D1.jpg" class="d-block w-100" alt="...">
+            <img src="/images/granit1__test.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="/images/front3.jpg" class="d-block w-100" alt="...">
