--- a/pages/3D/redbull.html
+++ b/pages/3D/redbull.html
@@ -17,7 +17,7 @@
   <body>
       <nav class="navbar navbar-fixed-bottom navbar-expand-lg navbar-light bg-white">
           <div class="container-fluid">
-            <a class="navbar-brand" href="/index.html">
+            <a class="navbar-brand" href="../../index.html">
               <img src="/images/logo.png" alt="" width="70" height="70">
             </a>
             <form class="d-flex">
@@ -27,10 +27,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/pages/landing.html">Home</a>
+                  <a class="nav-link" aria-current="page" href="/pages/landing.html">Home</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     3D
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -71,20 +71,20 @@
                             
                           <div class="pic__red-container">
                               <div class="img__redbox1">
-                                <img src="/images/redbull.jpg" class="redbull3">
+                                <img src="../../images/redbull.jpg" class="redbull3">
                               </div>
 
                                 <div class="img__redbox2">
                                     <div class="only__text">
                                       <p class="text__red">RED BULL CAN RENDER WITH PLAYSTATION 5 CONTROLLERS BUZZIN’, ALL IN 3D.</p>
                                     </div>
-                                      <img src="/images/redbull1.jpg" class="redbull1">
-                                      <img src="/images/redbull2.jpg" class="redbull2">
+                                      <img src="../../images/redbull1.jpg" class="redbull1">
+                                      <img src="../../images/redbull2.jpg" class="redbull2">
                                 </div>
                           </div>
 
                                 <div class="text-gif__container">
-                                  <img src="/images/redbull__back.gif" class="red__gif">
+                                  <img src="../../images/redbull__back.gif" class="red__gif">
                                 </div>
 
                           
@@ -92,7 +92,7 @@
 
                         <footer>
                           <div class="all__footer  bg-white">
-                          <img class="logo" src="/images/logo.png" alt="logo" width="50" height="50"> 
+                          <img class="logo" src="../../images/logo.png" alt="logo" width="50" height="50"> 
                           <a href="https://www.facebook.com/felicia.kyrling" class="fa fa-facebook" target="_blank"></a>
                           <a href="https://www.instagram.com/feliciakyrling/?hl=sv" class="fa fa-instagram" target="_blank"></a>
                           <a href="https://www.linkedin.com/in/felicia-kyrling-a1648b172/" class="fa fa-linkedin" target="_blank"></a>
