--- a/pages/3D/ref.html
+++ b/pages/3D/ref.html
@@ -18,7 +18,7 @@
       <nav class="navbar navbar-fixed-bottom navbar-expand-lg navbar-light bg-white">
           <div class="container-fluid">
             <a class="navbar-brand" href="/index.html">
-              <img src="/images/logo.png" alt="" width="70" height="70">
+              <img src="../../images/logo.png" alt="" width="70" height="70">
             </a>
             <form class="d-flex">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,10 +27,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/pages/landing.html">Home</a>
+                  <a class="nav-link" aria-current="page" href="/pages/landing.html">Home</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     3D
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -76,14 +76,14 @@
                             </div>
 
                             <div class="img__ref-container">
-                              <img class="ref__pic" src="/images/ref3.jpg">
+                              <img class="ref__pic" src="../../images/ref3.jpg">
                             </div>
 
                         </section>
 
                         <footer>
                           <div class="all__footer  bg-white">
-                            <img class="logo" src="/images/logo.png" alt="logo" width="50" height="50"> 
+                            <img class="logo" src="../../images/logo.png" alt="logo" width="50" height="50"> 
                             <a href="https://www.facebook.com/felicia.kyrling" class="fa fa-facebook" target="_blank"></a>
                             <a href="https://www.instagram.com/feliciakyrling/?hl=sv" class="fa fa-instagram" target="_blank"></a>
                             <a href="https://www.linkedin.com/in/felicia-kyrling-a1648b172/" class="fa fa-linkedin" target="_blank"></a>
