--- a/pages/3D/wacom.html
+++ b/pages/3D/wacom.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-fixed-bottom navbar-expand-lg navbar-light bg-white">
             <div class="container-fluid">
               <a class="navbar-brand" href="/index.html">
-                <img src="/images/logo.png" alt="" width="70" height="70">
+                <img src="../../images/logo.png" alt="" width="70" height="70">
               </a>
               <form class="d-flex">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,10 +27,10 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/pages/landing.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="/pages/landing.html">Home</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       3D
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -71,7 +71,7 @@
                 <section class="all__wacom-page"> 
 
                     <div class="wacom__image-box">
-                      <img src="/images/3D1.jpg" alt="robot" class="wacom__image">
+                      <img src="../../images/3D1.jpg" alt="robot" class="wacom__image">
                     </div>
 
                       <div class="vid-text__container">
@@ -80,7 +80,7 @@
                               It is all done in 3D, If you would like to see how the whole process looks, then take a look at the video down here for speedrun</p>
                               <i class="fas fa-angle-down fa-2x"></i>
                           </div>
-                        <div class="video__box">
+                        <div class="video__box-wacom">
                             <iframe width="960" height="515" src="https://www.youtube.com/embed/8IXrUkRB43w" title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
@@ -91,7 +91,7 @@
 
                   <footer>
                     <div class="all__footer  bg-white">
-                      <img class="logo" src="/images/logo.png" alt="logo" width="50" height="50"> 
+                      <img class="logo" src="../../images/logo.png" alt="logo" width="50" height="50"> 
                       <a href="https://www.facebook.com/felicia.kyrling" class="fa fa-facebook" target="_blank"></a>
                       <a href="https://www.instagram.com/feliciakyrling/?hl=sv" class="fa fa-instagram" target="_blank"></a>
                       <a href="https://www.linkedin.com/in/felicia-kyrling-a1648b172/" class="fa fa-linkedin" target="_blank"></a>
