--- a/pages/about.html
+++ b/pages/about.html
@@ -27,7 +27,7 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/pages/landing.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="/pages/landing.html">Home</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -57,7 +57,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/about.html">About</a>
+                    <a class="nav-link active" href="../pages/about.html">About</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../pages/contact.html">Contact</a>
