--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,7 +27,7 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/pages/landing.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="/pages/landing.html">Home</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -60,7 +60,7 @@
                     <a class="nav-link" href="/pages/about.html">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/pages/contact.html">Contact</a>
+                    <a class="nav-link active" href="/pages/contact.html">Contact</a>
                   </li>
                 </ul>
               </div>
