--- a/pages/Retouch/granit.html
+++ b/pages/Retouch/granit.html
@@ -72,17 +72,17 @@
 
                     <div class="granit__container">
                       <div class="granit__box">
-                        <img src="../../images/granit1__test.jpg" class="granit__pic">
+                        <img src="../../images/granit1.jpg" class="granit__pic">
                       </div>
                     <div class="granit__container2">
                       <div class="granit__box2">
-                        <img src="../../images/granit3_Test.jpg" class="granit__pic1">
+                        <img src="../../images/granit3.jpg" class="granit__pic1">
                       </div>
                       <div class="granit__box2">
-                        <img src="../../images/granit4_test.jpg" class="granit__pic1" >
+                        <img src="../../images/granit4.jpg" class="granit__pic1" >
                       </div>
                       <div class="granit__box2">
-                        <img src="../../images/granit2_test.jpg" class="granit__pic1">
+                        <img src="../../images/granit2.jpg" class="granit__pic1">
                       </div>
                     </div>
                     </div>
