--- a/pages/landing.html
+++ b/pages/landing.html
@@ -71,7 +71,7 @@
       <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/images/granit1__test.jpg" class="d-block w-100" alt="...">
+            <img src="/images/granit1.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="/images/front3.jpg" class="d-block w-100" alt="...">
