changed media q and changed toggler

--- a/pages/3D/ghosthouse.html
+++ b/pages/3D/ghosthouse.html
@@ -15,7 +15,7 @@
     <title>FeliciaKyrling</title>
 </head>
   <body>
-    <nav class="navbar navbar-fixed-bottom navbar-expand-lg navbar-light bg-white">
+    <nav class="navbar navbar-inverse navbar-expand-lg navbar-light bg-white">
             <div class="container-fluid">
               <a class="navbar-brand" href="../../index.html">
                 <img src="/images/logo.png" alt="" width="70" height="70">
