--- a/pages/about.html
+++ b/pages/about.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-fixed-bottom navbar-expand-lg navbar-light bg-white">   
             <div class="container-fluid">
               <a class="navbar-brand" href="/index.html">
-                <img src="/images/logo.png" alt="" width="70" height="70">
+                <img class="logo" src="../../images/logo.png" alt="" width="70" height="70">
               </a>
               <form class="d-flex">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -72,7 +72,7 @@
 
                           <div class="felicia__head-container">
                            <div class="about__head-text">
-                            <h2 class="about__head">"Hi there, I’m Felicia and I <br> work with 3D and retouch,<br> based in Stockholm, Sweden."
+                            <h2 class="about__head">"Hi there, I’m Felicia and I work with 3D and retouch, based in Stockholm, Sweden."
                             </h2>
                            </div>
                           </div>   
@@ -84,7 +84,7 @@
                             <img class="felicia__pic" src="../images/felly_2.jpg">
                           </div>
                           <div class="felicia__text-box">
-                            <h2 class="laugh">** laughing **</h2>
+                            <h2 class="laugh">** Laughing **</h2>
                             <p class="about__fel-text"> …oh sorry, forgot to mention! I work in programs like 3D Studio Max, Photoshop, DaVinci Resolve, After Effects and many more.
                             Education: Fotoskolan STHLM - Bachelor's Degree, Retouch and Post-Production</p>
                           </div>
@@ -117,7 +117,7 @@
 
                   <footer>
                     <div class="all__footer  bg-white">
-                      <img class="logo" src="/images/logo.png" alt="logo" width="50" height="50"> 
+                      <img class="logo" src="../../images/logo.png" alt="logo" width="50" height="50"> 
                       <a href="https://www.facebook.com/felicia.kyrling" class="fa fa-facebook" target="_blank"></a>
                       <a href="https://www.instagram.com/feliciakyrling/?hl=sv" class="fa fa-instagram" target="_blank"></a>
                       <a href="https://www.linkedin.com/in/felicia-kyrling-a1648b172/" class="fa fa-linkedin" target="_blank"></a>
