--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-fixed-bottom navbar-expand-lg navbar-light bg-white">
             <div class="container-fluid">
               <a class="navbar-brand" href="/index.html">
-                <img src="/images/logo.png" alt="" width="70" height="70">
+                <img src="../../images/logo.png" alt="" width="70" height="70">
               </a>
               <form class="d-flex">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -110,7 +110,7 @@
 
                   <footer>
                     <div class="all__footer  bg-white">
-                      <img class="logo" src="/images/logo.png" alt="logo" width="50" height="50" target="_blank"> 
+                      <img class="logo" src="../../images/logo.png" alt="logo" width="50" height="50" target="_blank"> 
                       <a href="https://www.facebook.com/felicia.kyrling" class="fa fa-facebook" target="_blank"></a>
                       <a href="https://www.instagram.com/feliciakyrling/?hl=sv" class="fa fa-instagram" target="_blank"></a>
                       <a href="https://www.linkedin.com/in/felicia-kyrling-a1648b172/" class="fa fa-linkedin" target="_blank"></a>
